kubernetes/base/005_requestAuthentication.yaml
# Copyright 2023 Universidad Politécnica de Madrid
# 
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
# 
#     http://www.apache.org/licenses/LICENSE-2.0
# 
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: security.istio.io/v1
kind: RequestAuthentication
metadata: 
  name: fosps-request-authorization
  namespace: default
spec:
  selector:
    matchLabels:
      istioRequireAuthentication: "true"
  jwtRules:
  - issuer: https://fosps.gravitatehealth.eu/auth/realms/GravitateHealth
    jwksUri: https://fosps.gravitatehealth.eu/auth/realms/GravitateHealth/protocol/openid-connect/certs
    forwardOriginalToken: true
